docs/versioned_docs/version-0.3/100-reference/01-command-line/acorn_credential_login.md
---
title: "acorn credential login"
---
## acorn credential login

Add registry credentials

```
acorn credential login [flags] [SERVER_ADDRESS]
```

### Examples

```

acorn login ghcr.io
```

### Options

```
  -h, --help              help for login
  -p, --password string   Password
      --password-stdin    Take the password from stdin
  -u, --username string   Username
```

### Options inherited from parent commands

```
  -A, --all-namespaces      Namespace to work in
      --context string      Context to use in the kubeconfig file
      --kubeconfig string   Location of a kubeconfig file
      --namespace string    Namespace to work in (default "acorn")
  -o, --output string       Output format (json, yaml, {{gotemplate}})
  -q, --quiet               Output only names
```

### SEE ALSO

* [acorn credential](acorn_credential.md)	 - Manage registry credentials

